# remapper

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  add_remap.ui  add_remap_ui.py  config.py  gui.py  inputdevice.py  meson.build  outputdevice.py  remap.py  remapper.desktop  remapper.kdev4  remapper.py  remapper.ui  remapper_ui.py  requirements.txt  setup.py  util.py
.github/workflows/: main.yml
src/: InputDevice.cpp  InputDevice.h  InputMap.cpp  InputMap.h  JSON.cpp  JSON.h  KeyCodes.cpp  KeyCodes.h  OutputDevice.cpp  OutputDevice.h  main.cpp
